k8s-administration/kind-gws/nginx-fabric-gw.yaml
apiVersion: gateway.networking.k8s.io/v1  
kind: Gateway                             
metadata:
  name: gateway                           
  namespace: ngf-gatewayapi      
spec:
  gatewayClassName: nginx               
  listeners:                 
    - name: http                          
      port: 80                          
      protocol: HTTP                      
      allowedRoutes:                      
        namespaces:
          from: All
